--- a/client/css/style.css
+++ b/client/css/style.css
@@ -2,10 +2,13 @@ body, html {
     height: 100%;
     background-repeat: no-repeat;
 
+
 }
 .card-container.card {
-    max-width: 350px;
+    background-color:#e3e8ea21;
+    max-width: 381px;
     padding: 80px 40px;
+    height: 370px;
 }
 .btn {
     font-weight: 700;
@@ -61,6 +64,7 @@ body, html {
     color: rgb(104, 145, 162);
     margin-top:15px;
     cursor:pointer;
+    font-size: 14px;
 }
 #inputUsername {
 border: 0;
@@ -77,25 +81,28 @@ border: 0;
 }
 body {
   font-family: Arial;
-  font-size: 13px;
+  font-size: 18px;
   padding: 50px;
-  background-color: #e0a3a3;
+
 
 }
 .background {
-  background-color:white;
+  background-color: #e3e8ea21;
+  max-width: 381px;
+  padding: 80px 40px;
+  height: 370px;
   padding: 5px 20px 15px 20px;
   border: 1px solid lightgrey;
   border-radius: 3px;
-  max-width: 500px;
-  height: 400px;
+  max-width: 616px;
+  height: 385px;
   margin: auto;
   margin-top:40px;
   margin-bottom:40px;
 }
 
 input[type=text] {
-  width: 50%;
+  width: 100%;
   margin-bottom: 20px;
   padding: 0px;
   border: 2px solid #ccc;
@@ -126,7 +133,8 @@ border: 0;
   outline: 0;
   background: transparent;
   border-bottom: 1px solid black;
-  display:flex;
+  border:none;
+
 }
 #Password{
 border: 0;
@@ -146,6 +154,7 @@ border: 0;
   outline: 0;
   background: transparent;
   border-bottom: 1px solid black;
+  margin-left:10px;
 
 }
 input[placeholder]{
@@ -153,6 +162,11 @@ width:500;
 font-size: 17px;
 }
 
+.modal-content{
+  margin-left: -47px;
+    margin-top: 53px;
+    margin-right: -21px;
+}
 
 .sidenav {
     height: 100%;
@@ -161,7 +175,7 @@ font-size: 17px;
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: black;
+    background-color: #3a4651;;
     overflow-x: hidden;
     padding-top: 20px;
     font-size:10px;
@@ -180,12 +194,36 @@ font-size: 17px;
 }
 
 .topnav {
+    overflow: hidden;
+    background-color: #d7dde4;
+    /* margin-top: -71px; */
+    text-align: right;
+    position: fixed;
+    width: 91%;
+    padding-top: 1px;
+    top:0;
+}
+
+
+
+.header {
   overflow: hidden;
-  background-color: lightblue;
+  background-color: #cbade62b;
   margin-right: -113px;
   margin-left: 23px;
-  margin-top: -49px;
+  margin-top: -39px;
   text-align: right;
+  position: fixed;
+  width: 89%;
+}
+
+
+
+#title {
+
+margin-top: 60px;
+
+
 }
 
 .topnav a {
@@ -212,22 +250,61 @@ font-size: 17px;
   float: right;
   color:black;
 }
-#right-content{
-  display:table;
+.name {
+  margin-top:21px;
 }
 
-.ng-scope {
-  border-spacing: 0;
+/* table, th , td  {
+  border: 0px solid grey;
+  padding: 11px;
+  width: 50px;
+  margin-top:65px;
+  margin-right:60px;
+
+} */
+/* .margin{
+  margin-left:10px;
+  margin-top: 55px;
+  width: 0%;
+  margin:0 auto;
+  max-width: 79%;
+} */
+.w3-container {
+    margin-top: 92px;
+    margin-left: 107px;
+    font-size: 15px;
+    padding-top: 0px;
 }
-table, th , td  {
-  border: 1px solid grey;
-  border-collapse: collapse;
-  padding: 1px
-  table-layout: fixed;
-  width: 600px;
-  margin-left: 295px;
-  margin-top:85px;
+.manageDetails {
+  margin-top: 19px;
 }
+
+
+ table {
+    margin-right: -160px;
+    margin-left: 8px;
+    width: 80%;
+    margin-left: 20px;
+    margin-top: 46px;
+    padding: 20px;
+}
+th{
+  background-color: lightpink;
+
+}
+/* table {
+    border-collapse: collapse;
+} */
+
+
+/* th, td {
+    padding: 28px;
+    border: 1px solid #ddd;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+tr:hover {background-color:#f5f5f5;} */ */ */
 .main {
     margin-left: 200px;
   }
@@ -246,9 +323,105 @@ h1{
     background-color: lightblue;
 }
 .container {
-color= blue;
+  font-size: 18px;
+  /* width: 100%; */
+    /* position: absolute;
+    /* height: 100%; */
+    /* overflow-y: auto;
+    overflow-x: hidden; */ */
+/* background-color: #9c27b07a; */
 }
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
 }
+profile profile-container {
+  max-width: 350px;
+  padding: 80px 40px;
+  height: 333px;
+
+}
+/* .profilecontainer {
+  background-color:lightblue;
+  padding: 20px 25px 30px;
+  margin: 0 auto 25px;
+  margin-top: 50px;
+  border-radius: 1px;
+  box-shadow: 0px 0px 2px 2px rgba(0.3, 0.3, 0.3, 0.3)
+} */
+.profileform {
+   background-color: #d0c8ca14;
+   padding: 5px 20px 15px 20px;
+   border: 0px solid lightgrey;
+   border-radius: 3px;
+   padding: 20px 25px 30px;
+
+   margin-top: 29px;
+   margin-bottom:40px;
+  /* width: 100%; */
+    margin-left: 148px;
+    margin-right: 155px;
+    position: absolute;
+    height: 80%;
+    overflow-y: auto;
+    overflow-x: hidden
+
+      /* background-color: lavenderblush;
+    padding: 5px 20px 15px 20px;
+    border: 0px solid lightgrey;
+    border-radius: 3px;
+    padding: 20px 25px 30px;
+    margin-top: 44px;
+    margin-bottom: 40px;
+    /* width: 100%; */
+    /* margin-left: -10px;
+    margin-right: 185px;
+    position: absolute;
+    height: 102%;
+    overflow-y: auto;
+    overflow-x: hidden; */ */
+
+}
+.tablestyle {
+  width:100px;
+  margin-right: 237px;
+  margin-left: 223px;
+}
+.w3-btn w3-ripple {
+  cursor: pointer;
+}
+.modal-body {
+  width:100%;
+}
+@media (min-width: 1200px)
+.col-lg-2 {
+    width: 16.66666667%;
+    padding-bottom: 10px;
+}
+.userdetails {
+    margin-top: 76px;
+}
+.marksview {
+margin-top: 65px;
+}
+.title-block {
+    padding-bottom: 15px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #d7dde4;
+    margin-left: 125px;
+}
+/* .collapse-btn {
+
+    background: none;
+    border: none;
+    box-shadow: none;
+    color: #85CE36;
+    font-size: 24px;
+    line-height: 40px;
+    border-radius: 0;
+    outline: none;
+    padding: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+    vertical-align: initial;
+} */
