--- a/client/views/signup.html
+++ b/client/views/signup.html
@@ -1,4 +1,4 @@
-<body backgroundcolor="#eab9b9">
+<body>
 <center> <h2> SignUp </h2></center>
   <div class="background">
     <form name="form" class="form-signup" ng-submit="signup(data)" novalidate>
@@ -6,7 +6,7 @@
     <div class = "col-lg-12">
         <div class = "col-lg-6">
           <div class="form-group text-marg" ng-class="{ 'has-error' : data.password.$invalid && !data.password.$pristine }">
-            <input type="name"id="Username" placeholder="Username" ng-model="data.Username" name='uname' required />
+            <input type="name"id="email" placeholder="Username" ng-model="data.Username" name='uname' required />
            <div>
             <span ng-show="default && form.uname.$error.required" style=color:red>Username Required.</span>
           </div>
