--- a/client/views/signin.html
+++ b/client/views/signin.html
@@ -17,7 +17,7 @@
       </div>
     </div>
       <button class="signin-button" type="submit">Sign in</button>
-      <center> <a  href ng-click="click()" class="clicktosignup"> Do not have an account! Click to signup</center></a>
+      <center> <a  href ng-click="click()" class="clicktosignup"> Click to signup</center></a>
     </div>
   </form>
   </div>
